# allot

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.rst  allot.py  pyproject.toml
tests/: test_allot_basic.py  test_allot_cpython.py  test_allot_pass.py
